# snail

./: .gitignore  CMakeLists.txt  format-latest.md
include/snailviewer/: event.hpp  liveness.hpp  uid.hpp
src/snailviewer/: liveness_pthread.cpp  main.cpp
src/viewer/: main.cpp
